# ZynAddSubFX

./: .gitignore  README.txt  bisect.sh
src/: CMakeLists.txt  globals.h  main.cpp
src/Controls/: ArrayControl.cpp  ArrayControl.h  BankControl.cpp  BankControl.h  CMakeLists.txt  CharControl.cpp  CharControl.h  Control.C  Control.cpp  Control.h  ControlContainer.cpp  ControlContainer.h  ControlUser.h  DelayCtl.C  DelayCtl.cpp  DelayCtl.h  DescRanger.cpp  DescRanger.h  DetuneControlSet.cpp  DetuneControlSet.h  Event.cpp  Event.h  EventClasses.cpp  EventClasses.h  FakeChildFactory.cpp  FakeChildFactory.h  FloatControl.cpp  FloatControl.h  GenControl.cpp  GenControl.h  InstrumentContainer.cpp  InstrumentContainer.h  InstrumentControl.cpp  InstrumentControl.h  Job.cpp  Job.h  JobClasses.h  Node.cpp  Node.h  Ranger.cpp  (+7 more)
src/DSP/: Filter.cpp  FormantFilter.cpp
src/Effects/: Alienwah.cpp  DynamicFilter.cpp  Echo.C  Echo.cpp  Echo.h  EffectMgr.cpp
src/Input/: ALSAMidiIn.cpp  ALSAMidiIn.h  CMakeLists.txt  MidiIn.h
src/Misc/: InjFunction.h  LinInjFunc.h  Master.C  Master.cpp  Master.h  Part.C  Part.cpp  Part.h  Util.cpp  Util.h  XMLwrapper.cpp  XMLwrapper.h  db2rapInjFunc.h
src/NewUI/: AddnoteUI.cpp  AddnoteUI.h  AddnoteUI.ui  ArrayControlHelper.cpp  ArrayControlHelper.h  BankLoader.cpp  BankLoader.h  BankLoader.ui  BankUI.cpp  BankUI.h  Button.cpp  Button.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  Checkbox.cpp  CollapsableFrame.cpp  CollapsableFrame.h  CollapsableFrame.ui  ComboBox.cpp  ComboBox.h  Combobox.cpp  Combobox.h  ControlHelper.cpp  ControlHelper.h  DebugInterface.cpp  DebugInterface.h  Dial.cpp  Dial.h  EnvelopeBox.cpp  EnvelopeBox.h  EnvelopeBox.ui  EventHelper.cpp  GroupBox.cpp  GroupBox.h  Keyboard.cpp  Keyboard.h  LFO.ui  LFOBox.cpp  LFOBox.h  (+86 more)
src/NewUI/Addnote/: AddnoteUI.cpp  AddnoteUI.h  AddnoteUI.ui  NewAddNote.ui  VoiceList.cpp  VoiceList.h  VoiceList.ui  VoiceParameters.cpp  VoiceParameters.h  VoiceParameters.ui  VoiceWidget.cpp  VoiceWidget.h  VoiceWidgetExpanded.ui
src/NewUI/images/: spindial.xcf
src/Nio/: AlsaEngine.cpp  InMgr.cpp  InMgr.h  JackEngine.cpp  MidiIn.cpp  NulEngine.cpp  OssEngine.cpp  OutMgr.cpp
src/Output/: JACKaudiooutput.cpp
src/Params/: ADnoteParameters.cpp  ADnoteParameters.h  EnvelopeParams.cpp  EnvelopeParams.h  FilterParams.cpp  FilterParams.h  LFOParams.cpp  LFOParams.h  PADnoteParameters.cpp  Presets.cpp  Presets.h  PresetsArray.cpp  PresetsArray.h  SUBnoteParameters.cpp
src/Seq/: MIDIFile.cpp
src/Synth/: ADnote.cpp  ADnote.cxx  Envelope.cpp  LFO.cpp  OscilGen.cpp  OscilGen.h  Resonance.cpp
src/Tests/: AdNoteTest.h  ControllerTest.h  EchoTest.h  MicrotonalTest.h  SampleTest.h  SubNoteTest.h  XMLwrapperTest.h  testing.h
src/UI/: MasterUI.fl  PartUI.fl
